fix readmeW&mainW&selW, add background pic

--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -4,5 +4,7 @@
         <file>../sample/photo/grassbarrier.jpg</file>
         <file>../sample/photo/startbutton.jpg</file>
         <file>../sample/photo/timgD353I83R.jpg</file>
+        <file>../sample/photo/u=3649233962,2139062940&amp;fm=27&amp;gp=0[1].jpg</file>
+        <file>../sample/photo/steel.jpg</file>
     </qresource>
 </RCC>
