--- a/TankGame/mainwindow.ui
+++ b/TankGame/mainwindow.ui
@@ -16,6 +16,12 @@
     <height>488</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>662</width>
+    <height>488</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
