--- a/TankGame/selectlevelwindow.ui
+++ b/TankGame/selectlevelwindow.ui
@@ -10,6 +10,18 @@
     <height>631</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>842</width>
+    <height>631</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>842</width>
+    <height>631</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
