--- a/TankGame/shop.ui
+++ b/TankGame/shop.ui
@@ -21,16 +21,25 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1051</width>
-     <height>641</height>
+     <width>1053</width>
+     <height>639</height>
     </rect>
    </property>
-   <widget class="QWidget" name="page">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="currentIndex">
+    <number>0</number>
+   </property>
+   <widget class="QWidget" name="Tank_reinforce">
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <widget class="QPushButton" name="reinforceButton">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>40</y>
+       <x>850</x>
+       <y>50</y>
        <width>93</width>
        <height>28</height>
       </rect>
@@ -42,8 +51,8 @@
     <widget class="QPushButton" name="budgetButton">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>40</y>
+       <x>940</x>
+       <y>50</y>
        <width>93</width>
        <height>28</height>
       </rect>
@@ -53,7 +62,11 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="page_2"/>
+   <widget class="QWidget" name="Tank_budget">
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
