--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -33,5 +33,10 @@
         <file>../sample/photo/Shop_pic/Shop_button.jpg</file>
         <file>../sample/photo/Shop_pic/Shop_weapon.jpg</file>
         <file>../sample/photo/Shop_pic/Shop_weapon_plus.jpg</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1down.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1left.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1right.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1up.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank12up.png</file>
     </qresource>
 </RCC>
