--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -38,5 +38,6 @@
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1right.png</file>
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1up.png</file>
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank12up.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/move.wav</file>
     </qresource>
 </RCC>
