--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -39,5 +39,7 @@
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank1up.png</file>
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/tank12up.png</file>
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/move.wav</file>
+        <file>../sample/photo/board.png</file>
+        <file>../sample/photo/board2.png</file>
     </qresource>
 </RCC>
