--- a/TankGame/High.ui
+++ b/TankGame/High.ui
@@ -10,6 +10,18 @@
     <height>671</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1068</width>
+    <height>671</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1068</width>
+    <height>671</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -24,6 +36,18 @@
      <width>171</width>
      <height>71</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>171</width>
+     <height>71</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>171</width>
+     <height>71</height>
+    </size>
    </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/High_pic/High_labelbg.png);</string>
@@ -219,11 +243,23 @@ border-image: url(:/sample/photo/High_pic/High_beatnumbers/High_beatnumbers_1.jp
      <height>351</height>
     </rect>
    </property>
+   <property name="minimumSize">
+    <size>
+     <width>421</width>
+     <height>351</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>421</width>
+     <height>351</height>
+    </size>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/High_pic/3.jpg);</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>5</number>
    </property>
    <widget class="QWidget" name="num_1"/>
    <widget class="QWidget" name="num_2"/>
@@ -235,6 +271,166 @@ border-image: url(:/sample/photo/High_pic/High_beatnumbers/High_beatnumbers_1.jp
    <widget class="QWidget" name="lev_3"/>
    <widget class="QWidget" name="lev_4"/>
    <widget class="QWidget" name="lev_5"/>
+  </widget>
+  <widget class="QLabel" name="lbl_5">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>310</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_3">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>420</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_4">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>420</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_1">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>530</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_2">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>530</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_10">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>330</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_8">
+   <property name="geometry">
+    <rect>
+     <x>770</x>
+     <y>430</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_9">
+   <property name="geometry">
+    <rect>
+     <x>920</x>
+     <y>430</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_6">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>540</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_7">
+   <property name="geometry">
+    <rect>
+     <x>950</x>
+     <y>530</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
