--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -41,5 +41,6 @@
         <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/move.wav</file>
         <file>../sample/photo/board.png</file>
         <file>../sample/photo/board2.png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png</file>
     </qresource>
 </RCC>
