--- a/TankGame/tank_budget.ui
+++ b/TankGame/tank_budget.ui
@@ -10,6 +10,18 @@
     <height>633</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1050</width>
+    <height>633</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1050</width>
+    <height>633</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -25,11 +37,17 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Showcard Gothic</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/Shop_pic/Shop_button.jpg);</string>
    </property>
    <property name="text">
-    <string/>
+    <string>20金币</string>
    </property>
   </widget>
   <widget class="QPushButton" name="backButton">
@@ -165,11 +183,17 @@ border-image: url(:/sample/photo/label_bg .png);</string>
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Showcard Gothic</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/Shop_pic/Shop_button.jpg);</string>
    </property>
    <property name="text">
-    <string/>
+    <string>10金币</string>
    </property>
   </widget>
   <widget class="QLabel" name="tankLable">
