--- a/TankGame/tank_reinforce.ui
+++ b/TankGame/tank_reinforce.ui
@@ -10,6 +10,18 @@
     <height>641</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1051</width>
+    <height>641</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1051</width>
+    <height>641</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -25,11 +37,17 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Showcard Gothic</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/Shop_pic/Shop_button.jpg);</string>
    </property>
    <property name="text">
-    <string/>
+    <string>10金币</string>
    </property>
   </widget>
   <widget class="QPushButton" name="defenceButton">
@@ -41,11 +59,17 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Showcard Gothic</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/Shop_pic/Shop_button.jpg);</string>
    </property>
    <property name="text">
-    <string/>
+    <string>10金币</string>
    </property>
   </widget>
   <widget class="QPushButton" name="fastButton">
@@ -57,11 +81,17 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Showcard Gothic</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">border-image: url(:/sample/photo/Shop_pic/Shop_button.jpg);</string>
    </property>
    <property name="text">
-    <string/>
+    <string>10金币</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
