--- a/TankGame/shop.ui
+++ b/TankGame/shop.ui
@@ -91,6 +91,28 @@
       <string>Budget</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="backButton">
+     <property name="geometry">
+      <rect>
+       <x>910</x>
+       <y>520</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>16</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/sample/photo/label_bg.png);</string>
+     </property>
+     <property name="text">
+      <string>back</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="Tank_budget">
     <property name="styleSheet">
